Node Storage, Key Info, Tests Add interface for trie node storage (instead of a plain array). Add storage classes backed by simple array and dictionary. Change ITrieKeyInfo to create node storage instead of reporting required size. Use specialized node storage classes in a couple tests. Optimize the test string key info class. Make all the test key info classes true singlton. Add a byte[] key info class and tests, uding dictionary storage. Simplify the TakeSkip() utility method, and add a test for it. Add a word dictionary, and a search benchmark for trie set vs hash set.

--- a/Trie/Trie.csproj
+++ b/Trie/Trie.csproj
@@ -45,6 +45,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DictionaryTrieNodeStorage.cs" />
+    <Compile Include="ArrayTrieNodeStorage.cs" />
+    <Compile Include="ITrieNode.cs" />
+    <Compile Include="ITrieNodeStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ITrieKeyInfo.cs" />
     <Compile Include="TrieDictionary.cs" />
