--- a/Trie.Test/Trie.Test.csproj
+++ b/Trie.Test/Trie.Test.csproj
@@ -45,16 +45,18 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KeyInfo\StringAtoZTrieKey.cs" />
-    <Compile Include="KeyInfo\UInt16HalfNibbleTrieKey.cs" />
-    <Compile Include="KeyInfo\UInt32NibbleTrieKey.cs" />
-    <Compile Include="KeyInfo\UInt64ByteTrieKey.cs" />
-    <Compile Include="KeyInfo\UInt8BinaryTrieKey.cs" />
+    <Compile Include="KeyInfo\ByteArrayTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\StringAtoZTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\UInt16HalfNibbleTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\UInt32NibbleTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\UInt64ByteTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\UInt8BinaryTrieKeyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrieDictionaryExceptionTests.cs" />
     <Compile Include="TrieDictionaryHappyPathTests.cs" />
     <Compile Include="TrieSetExceptionTests.cs" />
     <Compile Include="TrieSetHappyPathTests.cs" />
+    <Compile Include="UtilTests.cs" />
     <Compile Include="Util\TrieAssert.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
   </ItemGroup>
@@ -66,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Words.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
