--- a/Trie.Test/Trie.Test.csproj
+++ b/Trie.Test/Trie.Test.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KeyInfo\ByteArrayTrieKeyInfo.cs" />
+    <Compile Include="KeyInfo\String0to9TrieKeyInfo.cs" />
     <Compile Include="KeyInfo\StringTrieKeyInfo.cs" />
     <Compile Include="KeyInfo\StringAtoZTrieKeyInfo.cs" />
     <Compile Include="KeyInfo\UInt16HalfNibbleTrieKeyInfo.cs" />
