--- a/Trie.Test/Trie.Test.csproj
+++ b/Trie.Test/Trie.Test.csproj
@@ -6,6 +6,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CA1841;IDE0150</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CA1841;IDE0150</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Words.txt" />
   </ItemGroup>
